syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpccommon";
option java_outer_classname = "GeneratorProto";
option objc_class_prefix = "RTG";

package service;

service SubscriptionService {
  rpc CreateSubscription (CreateSubscriptionRequest) returns (CreateSubscriptionResponse);
  rpc GetAvailableSubscriptions (Empty) returns (SubscriptionListResponse);
  rpc GetSubscriptionsByUserId (UserIdRequest) returns (SubscriptionListResponse);
}

message CreateSubscriptionRequest {
  int64 userId = 1;
  int64 subscriptionId = 2;
}

message CreateSubscriptionResponse {
  bool success = 1;
  string message = 2;
}

message Empty {}

message UserIdRequest {
  int64 userId = 1;
}

message Subscription {
  int64 subscriptionId = 1;
  string subscriptionName = 2;
  double price = 3;
  int32 durationDays = 4;
}

message SubscriptionListResponse {
  repeated Subscription subscriptions = 1;
}